# websweeper

./: .env.example  .gitignore  CLAUDE.md  PROJECT_SPEC.md  README.md  pyproject.toml
docs/: current-state.md  decisions.md  user-guide.md
extensions/finance/: actions.py
extensions/finance/configs/: bofa_checking.yaml  bofa_statements.yaml
src/websweeper/: __init__.py  cli.py  config.py  credentials.py  diagnostics.py  executor.py  gmail_auth.py  gmail_reader.py  output.py  proof.py  proof_search.py  runner.py  session.py  transforms.py  utils.py  watcher.py
src/websweeper/extractors/: pdf_download.py  table.py
tests/: test_config.py  test_credentials.py  test_diagnostics.py  test_executor.py  test_integration.py  test_output.py  test_session.py  test_transforms.py
tests/fixtures/: invalid_config.yaml  minimal_config.yaml  test_page.html  test_site_config.yaml  valid_config.yaml
